grammar.txt
#Nonterminals: (PROGRAM, PROLOG, CLASS, DEF_FUN, DEF_FUN_TAIL, DEF_FUN_LIST, 
PARAMETER_LIST, BLOCK, PARAMETER_TAIL, STML, STML_ID, STML_LIST, STML_LINE,
VAR, IF, WHILE, RETURN, ARGUMENT_LIST, ARGUMENT_TAIL,
TERM)


#ESTE JU PREPISEM NA TOKENY(SPRAVNY NAZOV)


PROGRAM -> PROLOG eol CLASS  
PROLOG -> import "ifj25" for Ifj
CLASS -> class Program { eol DEF_FUN_LIST } 

DEF_FUN_LIST -> DEF_FUN  DEF_FUN_LIST |ε
DEF_FUN -> static id DEF_FUN_TAIL
DEF_FUN_TAIL -> (PARAMETER_LIST) BLOCK eol | SETTER | GETTER
GETTER -> BLOCK eol
SETTER -> = (id) BLOCK eol
PARAMETER_LIST -> TERM PARAMETER_TAIL  | ε
PARAMETER_TAIL -> , TERM PARAMETER_TAIL | ε 
BLOCK -> { eol STML_LIST } 
STML_LIST -> STML_LINE  STML_LIST | ε
STML_LINE -> STML eol
STML -> VAR | IF | WHILE | RETURN | id STML_ID | BLOCK | IFJ
IFJ -> Ifj . ID ( PARAMETER_LIST )
STML_ID -> ( PARAMETER_LIST ) | = EXPRESSION
VAR -> var id
IF -> if ( EXPRESSION ) BLOCK else BLOCK
WHILE -> while ( EXPRESSION ) BLOCK  
//ARGUMENT_LIST -> EXPRESSION | ε
//ARGUMENT_TAIL -> , TERM ARGUMENT_TAIL | ε ***I think i dont need this***
TERM -> literal_num | literal_string | literal_null | id | global_id | getter_id
RETURN -> return EXPRESSION
EXPRESSION -> */Handeled by precedence parser/* Place Holder
